--- a/style.css
+++ b/style.css
@@ -12,7 +12,19 @@
 --old-lavender: #6d6875ff;
 
 }
+.headerDescription{
+  padding: 1rem;
+  margin-top: 5px;
+  position: flex;
 
+  font-size: 10px;
+  color: var(--old-lavender);
+  background-color: var(--pastel-pink);
+
+  border-radius: 10px;
+
+  font-family: 'Roboto', sans-serif;
+}
 body {
     height: 100vh;
     display: flex;
@@ -23,6 +35,7 @@ body {
     width: 940px;
     height: 550px;
     margin: auto;
+    padding: 25px;
     display: flex;
     flex-wrap: wrap;
     perspective: 1200px;
